@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.400 2006/10/02 13:38:17 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.401 2006/10/03 08:54:50 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -78,6 +78,9 @@ PH/12 Installed Andrey Panin's patch to add a dovecot authenticator. Various
           service in request". It would seem that Dovecot has changed its
           interface. Fortunately there's a specification; I followed it and
           changed what the client sends and it appears to be working now.
+
+PH/13 Added $message_headers_raw to provide the headers without RFC 2047
+      decoding.
 
 
 Exim version 4.63
